Debug overlap issues with navbar/breadcrumbs

--- a/src/assets/scss/custom/_nav-other.scss
+++ b/src/assets/scss/custom/_nav-other.scss
@@ -31,9 +31,9 @@
   }
 }
 
-// Too much space between breadcrumbs and horiz rule that follows...
+// Space between breadcrumbs and horiz rule that follows...
 .breadcrumbs {
-  margin: 0.6rem 0 0.5rem;
+  margin: .5rem 0;
   li {
     font-size: 0.8rem;
   }
